# hypha

./: .babelrc  .dev-env  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.yaml  .gitignore  .isort.cfg  .jscsrc  .pre-commit-config.yaml  .prettierignore  .sass-lint.yml  .stylelintrc.yaml  .test_durations  .travis.yml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  SECURITY.md  Vagrantfile  app.json  biome.json  conftest.py  dslr.toml  eslint.config.mjs  fabfile.py  gulpfile.js  index.html  jest.config.js  jestSetup.js  manage.py  (+14 more)
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  discussion-request.md  enhancement-request.md  feature_request.md  release-drafter.yml  scoping_review_form.md
.github/workflows/: codeql-analysis.yml  deploy-docs.yml  hypha-ci.yml  release-drafter.yml
.zed/: settings.json
addressfield/: fields.py  tests.py  widgets.py
addressfield/static/: address_form.js  addressfield.min.json  jquery.addressfield.min.js
assets/: extra.css
cookieconsent/: apps.py  models.py
cookieconsent/migrations/: 0001_initial.py
cookieconsent/templates/includes/: banner.html
docker/: Dockerfile  Dockerfile.dev  Dockerfile.dockerignore  Dockerfile.prod  README.md  compose.yaml  dev.yaml  docker-compose.yaml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  wrapper
docker/dev/: Dockerfile  compose.yaml
docker/nginx/: hypha-prod.conf  hypha.conf  nginx.conf
docker/prod/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  compose.yaml  entrypoint.sh
docker/prod/config/: gunicorn.py
docker/prod/nginx/: Dockerfile  hypha.conf
docs/: .nav.yml  glossary.md  index.md
docs/administrators/: customising.md
docs/assets/: extra.css
docs/contributing/: codeofconduct.md  contribute-to-documentation.md  index.md
docs/contributing/code/: index.md  (+3 more)
docs/developers/: admin.md  createusers.md  localdeveldocker.md  localdevelscratch.md  notifications.md  userrolespermissions.md  wagtail.md  workflows.md
docs/getting-started/: .nav.yml  .pages  architecture.md  deployment.md
docs/references/: accessibility.md  glossary.md  notifications.md  open-calls-api-json.md  plugins.md  project-reports.md  projects.md  rest-api.md  security.md  security2fa.md  signals.md  template-hooks.md  template-hooks.rst  user-roles.md  wagtail-admin.md  workflows.md
docs/scripts/: doc_macros.py  gen_ref_pages.py
docs/setup/: setup-notifications.md
docs/staff/: create-a-user-account.md  index.md  localization-and-translation.md
docs/user-guides/: creating-a-user-account.md  login.md
extensions/django_hooks/: README.md  templatehook.py
getting-started/LICENSE/: index.html
getting-started/SECURITY/: index.html
getting-started/architecture/: index.html
getting-started/deployment/: index.html
hypha/: celery.py  health.py  storage_backends.py  test_health.py  urls.py  wsgi.py
hypha/addressfield/: fields.py  tests.py  widgets.py
hypha/api/: urls.py
hypha/apply/: apps.py  middleware.py  urls.py
hypha/cookieconsent/: apps.py  context_processors.py  models.py
hypha/core/: apps.py  components.py  context_processors.py  mail.py  navigation.py  tables.py  templatehook.py  utils.py  wagtail_hooks.py  widgets.py
hypha/elevate/: __init__.py  apps.py  decorators.py  forms.py  middleware.py  mixins.py  settings.py  signals.py  utils.py  views.py
hypha/home/: apps.py  factories.py  models.py  tests.py  views.py  wagtail_hooks.py
hypha/images/: models.py
hypha/locale/: django.pot
hypha/public/: urls.py
hypha/reset_network/: middleware.py
hypha/settings/: base.py  dev.py  django.py  example.py  extensions.py  local.py.example  production.py  salesforce.py.example  test.py
hypha/templates/: 400.html  403.html  404.html  500.html  base-apply.html  base-pdf.html  base.html  password_required.html  styleguide.html
hypha/templates_custom/: base.html
opentech/: storage_backends.py  urls.py  wsgi.py  wsgi_cron.py
opentech/api/: pagination.py
opentech/apply/: admin.py  blocks.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py  workflow.py
opentech/categories/: models.py
opentech/esi/: __init__.py  middleware.py  views.py
opentech/forms/: models.py
opentech/home/: models.py
opentech/images/: models.py
opentech/navigation/: models.py
opentech/news/: models.py
opentech/people/: models.py  wagtail_hooks.py
opentech/projects/: models.py
opentech/public/: urls.py
opentech/publicpages/: apps.py  blocks.py  models.py
opentech/reset_network/: middleware.py
opentech/settings/: base.py  dev.py  local.py.example  production.py  test.py
opentech/standardpages/: models.py
opentech/static_src/: .babelrc  .eslintrc  .sass-lint.yml  README.md  browsersync.config.js  example.dploy.yaml  package-lock.json  package.json
opentech/stream_forms/: blocks.py  forms.py  models.py
opentech/templates/: 404.html  base-admin.html  base-apply.html  base.html  reset_network_404.html  styleguide.html
opentech/users/: groups.py  models.py  urls.py  views.py
opentech/utils/: blocks.py  context_processors.py  models.py  wagtail_hooks.py
playwright-report/: index.html
public/: robots.txt  sandbox_db.dump
references/accessibility/: index.html
references/glossary/: index.html
references/notifications/: index.html
references/open-calls-api-json/: index.html
references/plugins/: index.html
references/project-reports/: index.html
references/security/: index.html
references/security2fa/: index.html
references/template-hooks/: index.html
references/user-roles/: index.html
references/wagtail-admin/: index.html
references/workflows/: index.html
requirements/: dev.txt  docs.txt  prod.txt  translate-cpu.txt  translate.txt
scripts/: doc_macros.py
setup/deployment/: index.html
tests/: test_init.py
user-guides/creating-a-user-account/: index.html
user-guides/login/: index.html
vagrant/: provision.sh
(+4524 files in other folders)
