[project]
name = "hypha"
description = "A open source submission management platform to receive and manage applications for funding."
readme = "README.md"
version = "5.32.0"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }

dependencies = [
    "scout-apm~=3.3.0",
    "sentry-sdk~=2.24.1",
    "Babel~=2.17.0",
    "boto3~=1.37.18",
    "celery~=5.4.0",
    "click~=8.1.8",
    "dj-database-url~=2.3.0",
    "django-anymail~=12.0",
    "django-basic-auth-ip-whitelist~=0.8.0",
    "django-countries~=7.6.1",
    "django-elevate~=2.0.3",
    "django-extensions~=3.2.3",
    "django-file-form~=3.8.0",
    "django-filter==23.5",
    "django-formtools~=2.5.1",
    "django-fsm~=2.8.2",
    "django-heroku~=0.3.1",
    "django-hijack~=3.7.0",
    "django-htmx~=1.23.0",
    "django-nh3~=0.1.1",
    "django-pagedown~=2.2.1",
    "django-ratelimit~=4.1.0",
    "django-role-permissions~=3.2.0",
    "django-slack~=5.19.0",
    "django-storages~=1.14.5",
    "django-tables2~=2.7.5",
    "django-tinymce~=4.1.0",
    "django-two-factor-auth~=1.17.0",
    "django-web-components~=0.2.0",
    "django~=4.2.2",
    "django-stubs~=4.2.7",
    "djp~=0.3.1",
    "environs~=14.1.1",
    "gunicorn~=23.0.0",
    "heroicons~=2.11.0",
    "python-docx~=1.1.2",
    "htmldocx~=0.0.6",
    "lark~=1.2.2",
    "mistune~=3.1.3",
    "more-itertools~=10.6.0",
    "nh3~=0.2.21",
    "phonenumbers~=9.0.1",
    "Pillow~=10.4.0",
    "psycopg[binary]~=3.2.6",
    "pwned-passwords-django~=5.1.3",
    "reportlab~=4.3.1",
    "setuptools~=80.9.0",
    "social_auth_app_django~=5.4.3",
    "svgwrite~=1.4.3",
    "wagtail==5.2.8",
    "whitenoise~=6.9.0",
    "xhtml2pdf~=0.2.17",
    "xmltodict~=0.14.2",
    "wagtail-modeladmin>=2.1.0",
    "redis>=5.2.1",
]

[dependency-groups]
"dev" = [
    "mypy>=1.13.0",
    "coverage>=7.4.4",
    "django-browser-reload>=1.16.0",
    "django-coverage-plugin>=3.1.0",
    "django-debug-toolbar>=4.3.0",
    "django-dynamic-fixture>=4.0.1",
    "djhtml>=3.0.5",
    "dslr>=0.4.0",
    "factory_boy>=3.3.1",
    "Faker>=28.4.1",
    "freezegun>=1.5.1",
    "model-bakery>=1.17.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.9.0",
    "pytest-split>=0.10.0",
    "pytest-xdist[psutil]>=3.6.1",
    "responses>=0.25.0",
    "ruff>=0.7.0",
    "time-machine>=2.16.0",
    "wagtail-factories>=4.2.1",
    "Werkzeug>=3.0.6",
]
"docs" = [
    "mkdocs-material>=9.5.5",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "mkdocs-macros-plugin>=1.0.4",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "griffe>=0.49.0",
]

# Requirements for machine translations
"translate" = ["torch~=2.3", "argostranslate~=1.9.6"]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'hypha.settings.test'
addopts = ['-n=auto', '--failed-first']
python_files = ['tests.py', 'test_*.py', '*_tests.py']
testpaths = ["hypha"]
filterwarnings = [
    'ignore::DeprecationWarning',
    'ignore::PendingDeprecationWarning',
]

[tool.coverage.run]
parallel = true
plugins = ['django_coverage_plugin']
omit = ['*migrations*', '*test*', 'hypa/public/*']

# https://github.com/charliermarsh/ruff#ruff
[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "C901", # too complex
    # 'F821',
    # 'W605',
]
select = [
    'C', # flake8-comprehensions
    'B', # flake8-bugbear
    'E', # pycodestyle errors
    'F', # pyflakes
    'I', # iSort
    'W', # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"hypha/settings/*.py" = ["F405"]
"*migrations/*.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["hypha"]

[tool.typos.files]
extend-exclude = [
    ".git/",
    "*migrations*",
    "hypha/static_src/javascript/esm/",
    "*.min.js",
    "*.po",
    "*.min.json",
]
