[project]
name = "hypha"
description = "A open source submission management platform to receive and manage applications for funding."
readme = "README.md"
version = "6.2.0"
requires-python = ">=3.10"
license = "BSD-3-Clause"

dependencies = [
    "babel~=2.17.0",
    "boto3~=1.42.23",
    "celery~=5.6.2",
    "click~=8.3.1",
    "dj-database-url~=3.1.0",
    "django-anymail~=14.0",
    "django-basic-auth-ip-whitelist~=0.8.0",
    "django-cotton~=2.6",
    "django-countries~=8.2.0",
    "django-extensions~=4.1",
    "django-file-form~=4.0.0",
    "django-filter==25.2",
    "django-formtools~=2.5.1",
    "django-heroku~=0.3.1",
    "django-hijack~=3.7.6",
    "django-htmx~=1.27.0",
    "django-nh3~=0.2.1",
    "django-pagedown~=2.2.1",
    "django-ratelimit~=4.1.0",
    "django-role-permissions~=3.2.0",
    "django-slack~=5.19.0",
    "django-storages~=1.14.6",
    "django-tables2~=2.8.0",
    "django-tinymce~=5.0.0",
    "django-two-factor-auth~=1.18.1",
    "django-viewflow~=2.2.15",
    "django~=5.2.11",
    "djp~=0.3.1",
    "environs~=14.5.0",
    "gunicorn~=23.0.0",
    "heroicons~=2.13.0",
    "html-diff~=0.4.1",
    "htmldocx~=0.0.6",
    "lark~=1.3.1",
    "mistune~=3.2.0",
    "more-itertools~=10.8.0",
    "nh3~=0.3.2",
    "phonenumbers~=9.0.21",
    "pillow~=12.1.1",
    "psycopg[binary]~=3.3.2",
    "pwned-passwords-django~=5.2.0",
    "python-docx~=1.2.0",
    "redis~=7.1.0",
    "reportlab~=4.4.7 ",
    "scout-apm~=3.5.2",
    "sentry-sdk~=2.49.0",
    "setuptools~=80.9.0",
    "social_auth_app_django~=5.7.0",
    "svglib==1.5.1",
    "svgwrite~=1.4.3",
    "urllib3~=2.6.2",
    "wagtail-modeladmin~=2.2.0",
    "wagtail~=7.0.5",
    "whitenoise~=6.11.0",
    "xhtml2pdf~=0.2.17",
    "xmltodict~=1.0.2",
]

[dependency-groups]
"dev" = [
    "coverage>=7.13.1",
    "django-browser-reload>=1.21.0",
    "django-coverage-plugin>=3.2.0",
    "django-debug-toolbar>=6.1.0",
    "django-dynamic-fixture>=4.0.1",
    "django-stubs[compatible-mypy]>=5.2.9",
    "djhtml>=3.0.10",
    "dslr>=0.6.0",
    "factory_boy>=3.3.3",
    "faker>=40.1.0",
    "freezegun>=1.5.5",
    "model-bakery>=1.21.0",
    "mypy>=1.19.1 ",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-split>=0.10.0",
    "pytest-xdist[psutil]>=3.8.0",
    "responses>=0.25.8",
    "ruff>=0.14.10",
    "time-machine>=3.2.0",
    "wagtail-factories>=4.3.0",
    "Werkzeug>=3.1.4",
]
"docs" = [
    "griffe>=1.15.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]

# Requirements for machine translations
"translate" = ["torch~=2.7", "argostranslate~=1.9.6"]

[tool.uv]
default-groups = ["dev", "docs"]
required-version = ">=0.5.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
DJANGO_SETTINGS_MODULE = 'hypha.settings.dev'

[tool.pytest]
DJANGO_SETTINGS_MODULE = 'hypha.settings.test'
addopts = ['-n=auto', '--failed-first']
python_files = ['tests.py', 'test_*.py', '*_tests.py']
testpaths = ["hypha"]

[tool.coverage.run]
parallel = true
plugins = ['django_coverage_plugin']
omit = ['*migrations*', '*test*', 'hypa/public/*']

# https://github.com/charliermarsh/ruff#ruff
[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "C901", # too complex
    # 'F821',
    # 'W605',
]
select = [
    'C', # flake8-comprehensions
    'B', # flake8-bugbear
    'E', # pycodestyle errors
    'F', # pyflakes
    'I', # iSort
    'W', # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"hypha/settings/*.py" = ["F405"]
"*migrations/*.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["hypha"]

[tool.typos.files]
extend-exclude = [
    ".git/",
    "*migrations*",
    "hypha/static_src/javascript/esm/",
    "*.min.js",
    "*.po",
    "*.min.json",
]
